@@ -1,3 +1,8 @@
+2004-08-03  Per Bothner  <per@bothner.com>
+
+	* Variable.java (shouldEmit):  Require that scope's start and end
+	labels are non-null.  Minor optimization tweaking.
+
 2004-07-31  Per Bothner  <per@bothner.com>
 
 	* CodeAttr.java (label):  Remove field.
